--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                             <a href="Index.html" title="WLTDO">
-                                <img src="../Imagens/WLTDO.png">
+                                <img src="../Imagens/WLTDO.png" style="max-width: 100%">
                             </a>
 
                             <div class="col nav justify-content-end">
