--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 
     <script src="https://kit.fontawesome.com/ad2f9876f9.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../Estilos/Index.css">
+    <link rel="stylesheet" href="./Estilos/Index.css">
     <title>Who Let The Dogs Out</title>
 </head>
 
@@ -32,7 +32,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                             <a href="Index.html" title="WLTDO">
-                                <img src="../Imagens/WLTDO.png" style="max-width: 100%">
+                                <img src="./Imagens/WLTDO.png" style="max-width: 100%">
                             </a>
 
                             <div class="col nav justify-content-end">
@@ -41,9 +41,9 @@
                                         role="button" data-bs-toggle="dropdown" title="Sobre Nós"
                                         aria-expanded="false">Sobre Nós</a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="../Paginas/QuemSomos.html"
+                                        <li><a class="dropdown-item" href="./Paginas/QuemSomos.html"
                                                 title="Quem Somos">Quem Somos</a></li>
-                                        <li><a class="dropdown-item" href="../Paginas/PoliticasDoSite.html"
+                                        <li><a class="dropdown-item" href="./Paginas/PoliticasDoSite.html"
                                                 title="Politícas do Site">Politícas do Site</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
@@ -54,18 +54,18 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="../Paginas/ComoFunciona.html"
+                                    <a class="nav-link active" aria-current="page" href="./Paginas/ComoFunciona.html"
                                         title="Quero Adotar">Quero Adotar</a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page"
-                                        href="../Paginas/ComoPossoAjudar.html" title="Quero Ajudar">Quero
+                                        href="./Paginas/ComoPossoAjudar.html" title="Quero Ajudar">Quero
                                         Ajudar</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="../Paginas/Login.html"
+                                    <a class="nav-link active" aria-current="page" href="./Paginas/Login.html"
                                         title="Login">Cadastrar</a>
                                 </li>
                             </div>
@@ -75,7 +75,7 @@
                                     <input class="form-control me-2 barra" type="search" placeholder="Procurar"
                                         aria-label="Search">
                                     <button class="btn btn-outline-success lupa" type="submit"
-                                        style="background-image: url(../Imagens/LUPA.png);">
+                                        style="background-image: url(./Imagens/LUPA.png);">
                                     </button>
                                 </form>
                             </div>
@@ -89,7 +89,7 @@
 
     </header>
 
-    <main class="blocomain">a
+    <main class="blocomain">
         <p style="padding-bottom: 40px"></p>
 
         <!--Carrossel de Imagens-->
@@ -106,13 +106,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../Imagens/BANNER.png" class="d-block w-100" alt="...">
+                        <img src="./Imagens/BANNER.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../Imagens/BANNER 2.png" class="d-block w-100" alt="...">
+                        <img src="./Imagens/BANNER 2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../Imagens/BANNER 3.png" class="d-block w-100" alt="...">
+                        <img src="./Imagens/BANNER 3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -139,8 +139,8 @@
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                     <div class="card">
                         <a href="Alfredo.html" title="Alfredo" class="a3">
-                            <img src="../Imagens/ALFREDO-.png" onmouseover="this.src='../Imagens/ALFREDO.png'"
-                                onmouseout="this.src='../Imagens/ALFREDO-.png'" class="card-img-top" alt="...">
+                            <img src="./Imagens/ALFREDO-.png" onmouseover="this.src='./Imagens/ALFREDO.png'"
+                                onmouseout="this.src='./Imagens/ALFREDO-.png'" class="card-img-top" alt="...">
 
                             <div class="card-body">
                                 <h3 class="card-title">Alfredo</h3>
@@ -155,8 +155,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="HelaThorLoki.html" title="Hela Thor Loki" class="a3">
-                        <img src="../Imagens/HELA THOR LOKI-.png" onmouseover="this.src='../Imagens/HELA THOR LOKI.png'"
-                            onmouseout="this.src='../Imagens/HELA THOR LOKI-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/HELA THOR LOKI-.png" onmouseover="this.src='./Imagens/HELA THOR LOKI.png'"
+                            onmouseout="this.src='./Imagens/HELA THOR LOKI-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Hela Thor Loki</h3>
                             <p class="card-text">Gostamos muito de aprontar altas confusões e onde um vai o outro vai
@@ -171,8 +171,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="Polenta.html" title="Polenta" class="a3">
-                        <img src="../Imagens/POLENTA-.png" onmouseover="this.src='../Imagens/POLENTA.png'"
-                            onmouseout="this.src='../Imagens/POLENTA-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/POLENTA-.png" onmouseover="this.src='./Imagens/POLENTA.png'"
+                            onmouseout="this.src='./Imagens/POLENTA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Polenta</h3>
                             <p class="card-text">amo brincar de bolinha e me divertir com os meus amigos na área de
@@ -188,8 +188,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="Mingau.html" title="Mingau" class="a3">
-                        <img src="../Imagens/MINGAU-.png" onmouseover="this.src='../Imagens/MINGAU.png'"
-                            onmouseout="this.src='../Imagens/MINGAU-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/MINGAU-.png" onmouseover="this.src='./Imagens/MINGAU.png'"
+                            onmouseout="this.src='./Imagens/MINGAU-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Mingau</h3>
                             <p class="card-text">Sou muito dócil e adoro mostrar minha barriguinha para as pessoas
@@ -205,8 +205,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="Costelinha.html" title="Costelinha" class="a3">
-                        <img src="../Imagens/COSTELINHA-.png" onmouseover="this.src='../Imagens/COSTELINHA.png'"
-                            onmouseout="this.src='../Imagens/COSTELINHA-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/COSTELINHA-.png" onmouseover="this.src='./Imagens/COSTELINHA.png'"
+                            onmouseout="this.src='./Imagens/COSTELINHA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Costelinha</h3>
                             <p class="card-text">Estou prontinho e saudável para ganhar um novo lar! Será que irei
@@ -221,8 +221,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="Yondu.html" title="Yondu" class="a3">
-                        <img src="../Imagens/YONDU-.png" onmouseover="this.src='../Imagens/YONDU.png'"
-                            onmouseout="this.src='../Imagens/YONDU-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/YONDU-.png" onmouseover="this.src='./Imagens/YONDU.png'"
+                            onmouseout="this.src='./Imagens/YONDU-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Yondu</h3>
                             <p class="card-text">Tive quase zero contato com humanos, por isso sou mais assustado e
@@ -237,8 +237,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="Pacoca.html" title="Paçoca" class="a3">
-                        <img src="../Imagens/PAÇOCA-.png" onmouseover="this.src='../Imagens/PAÇOCA.png'"
-                            onmouseout="this.src='../Imagens/PAÇOCA-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/PAÇOCA-.png" onmouseover="this.src='./Imagens/PAÇOCA.png'"
+                            onmouseout="this.src='./Imagens/PAÇOCA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Paçoca</h3>
                             <p class="card-text">Era bastante tímida e às vezes demonstrava agressividade. Hoje até peço
@@ -253,8 +253,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
                     <a href="Tequila.html" title="Tequila" class="a3">
-                        <img src="../Imagens/TEQUILA-.png" onmouseover="this.src='../Imagens/TEQUILA.png'"
-                            onmouseout="this.src='../Imagens/TEQUILA-.png'" class="card-img-top" alt="...">
+                        <img src="./Imagens/TEQUILA-.png" onmouseover="this.src='./Imagens/TEQUILA.png'"
+                            onmouseout="this.src='./Imagens/TEQUILA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Tequila</h5>
                                 <p class="card-text">Fico sonhando como é dormir e acordar numa casa quentinha com uma
@@ -341,13 +341,13 @@
                             <div align="left">
                                 <h5>Sobre Nós</h5>
                                 <p></p>
-                                <a href="../Paginas/QuemSomos.html" title="Quem Somos" class="a1">Quem Somos</a>
+                                <a href="./Paginas/QuemSomos.html" title="Quem Somos" class="a1">Quem Somos</a>
                                 <br>
-                                <a href="../Paginas/PoliticasDoSite.html" title="Politícas do Site" class="a1">Politícas
+                                <a href="./Paginas/PoliticasDoSite.html" title="Politícas do Site" class="a1">Politícas
                                     do
                                     Site</a>
                                 <br>
-                                <a href="../Paginas/FaleConosco.html" title="Fale Conosco" class="a1">Fale Conosco</a>
+                                <a href="./Paginas/FaleConosco.html" title="Fale Conosco" class="a1">Fale Conosco</a>
                             </div>
                         </div>
 
@@ -356,7 +356,7 @@
                             <div align="left">
                                 <h5>Quero Adotar</h5>
                                 <p></p>
-                                <a href="../Paginas/ComoFunciona.html" title="Como Funciona?" class="a1">Como
+                                <a href="./Paginas/ComoFunciona.html" title="Como Funciona?" class="a1">Como
                                     Funciona?</a>
                             </div>
                         </div>
@@ -366,7 +366,7 @@
                             <div align="left">
                                 <h5>Quero Ajudar</h5>
                                 <p></p>
-                                <a href="../Paginas/ComoPossoAjudar.html" title="Como posso ajudar?" class="a1">Como
+                                <a href="./Paginas/ComoPossoAjudar.html" title="Como posso ajudar?" class="a1">Como
                                     posso
                                     ajudar?</a>
                             </div>
@@ -396,11 +396,11 @@
                             <div align="left">
                                 <h5>Minha Conta</h5>
                                 <p></p>
-                                <a href="../Paginas/LoginFirst.html" title="Adoções" class="a1">Adoções</a>
+                                <a href="./Paginas/LoginFirst.html" title="Adoções" class="a1">Adoções</a>
                                 <br>
-                                <a href="../Paginas/LoginFirst.html" title="Meus Dados" class="a1">Meus Dados</a>
+                                <a href="./Paginas/LoginFirst.html" title="Meus Dados" class="a1">Meus Dados</a>
                                 <br>
-                                <a href="../Paginas/Seguranca.html" title="Segurança" class="a1">Segurança</a>
+                                <a href="./Paginas/Seguranca.html" title="Segurança" class="a1">Segurança</a>
                             </div>
                         </div>
                     </div>
