--- a/Index.html
+++ b/Index.html
@@ -410,7 +410,7 @@
                         Copyright &copy; 2021 Who Let The Dogs Out LTDA
                         <br>
                         CNPJ nº 00.000.000/0001-00 / Av. Paulista, nº 509 - Bela Vista, São Paulo/SP - CEP 01311-910 -
-                        Empresa do Grupo WLTDO
+                        Empresa do Grupo WLTD
                     </p>
                 </div>
             </div>
