--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
                     <div class="row">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                            <a href="Index.html" title="WLTDO">
+                            <a href="./Index.html" title="WLTDO">
                                 <img src="./Imagens/WLTDO.png" style="max-width: 100%">
                             </a>
 
@@ -138,7 +138,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                     <div class="card">
-                        <a href="Alfredo.html" title="Alfredo" class="a3">
+                        <a href="./Paginas/Alfredo.html" title="Alfredo" class="a3">
                             <img src="./Imagens/ALFREDO-.png" onmouseover="this.src='./Imagens/ALFREDO.png'"
                                 onmouseout="this.src='./Imagens/ALFREDO-.png'" class="card-img-top" alt="...">
 
@@ -154,7 +154,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="HelaThorLoki.html" title="Hela Thor Loki" class="a3">
+                    <a href="./Paginas/HelaThorLoki.html" title="Hela Thor Loki" class="a3">
                         <img src="./Imagens/HELA THOR LOKI-.png" onmouseover="this.src='./Imagens/HELA THOR LOKI.png'"
                             onmouseout="this.src='./Imagens/HELA THOR LOKI-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -170,7 +170,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="Polenta.html" title="Polenta" class="a3">
+                    <a href="./Paginas/Polenta.html" title="Polenta" class="a3">
                         <img src="./Imagens/POLENTA-.png" onmouseover="this.src='./Imagens/POLENTA.png'"
                             onmouseout="this.src='./Imagens/POLENTA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -187,7 +187,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="Mingau.html" title="Mingau" class="a3">
+                    <a href="./Paginas/Mingau.html" title="Mingau" class="a3">
                         <img src="./Imagens/MINGAU-.png" onmouseover="this.src='./Imagens/MINGAU.png'"
                             onmouseout="this.src='./Imagens/MINGAU-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -204,7 +204,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="Costelinha.html" title="Costelinha" class="a3">
+                    <a href="./Paginas/Costelinha.html" title="Costelinha" class="a3">
                         <img src="./Imagens/COSTELINHA-.png" onmouseover="this.src='./Imagens/COSTELINHA.png'"
                             onmouseout="this.src='./Imagens/COSTELINHA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -220,7 +220,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="Yondu.html" title="Yondu" class="a3">
+                    <a href="./Paginas/Yondu.html" title="Yondu" class="a3">
                         <img src="./Imagens/YONDU-.png" onmouseover="this.src='./Imagens/YONDU.png'"
                             onmouseout="this.src='./Imagens/YONDU-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -236,7 +236,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="Pacoca.html" title="Paçoca" class="a3">
+                    <a href="./Paginas/Pacoca.html" title="Paçoca" class="a3">
                         <img src="./Imagens/PAÇOCA-.png" onmouseover="this.src='./Imagens/PAÇOCA.png'"
                             onmouseout="this.src='./Imagens/PAÇOCA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -252,7 +252,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card">
-                    <a href="Tequila.html" title="Tequila" class="a3">
+                    <a href="./Paginas/Tequila.html" title="Tequila" class="a3">
                         <img src="./Imagens/TEQUILA-.png" onmouseover="this.src='./Imagens/TEQUILA.png'"
                             onmouseout="this.src='./Imagens/TEQUILA-.png'" class="card-img-top" alt="...">
                         <div class="card-body">
