--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
                     <div class="row">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                            <a href="./Index.html" title="WLTDO">
+                            <a href="Index.html" title="WLTDO">
                                 <img src="./Imagens/WLTDO.png" style="max-width: 100%">
                             </a>
 
