--- a/Paginas/HelaThorLoki.html
+++ b/Paginas/HelaThorLoki.html
@@ -32,7 +32,7 @@
                     <div class="row">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                            <a href="Index.html" title="WLTDO">
+                            <a href="../Index.html" title="WLTDO">
                                 <img src="../Imagens/WLTDO.png">
                             </a>
 
